--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "//here we write our code and node js",
   "main": "4-export.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start":"nodeman app.js"
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,8 @@
   "keywords": [],
   "dependencies": {
     "lodash": "^4.17.21"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
