--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "//here we write our code and node js",
   "main": "4-export.js",
   "scripts": {
-    "start":"nodeman app.js"
+    "start": "nodeman app.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/ssmohanty153/alethea-practice#readme",
   "keywords": [],
   "dependencies": {
+    "express": "^4.17.2",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
